@@ -835,6 +835,9 @@ Item.ChimaeraWing.Name=Chimaera Wing
 Item.ChimaeraWing.Lore=[[GRAY]]Teleports you to your bed.
 Item.Generic.Wait=[[RED]]You need to wait before you can use this again! [[YELLOW]]({0}s)
 Item.Injured.Wait=You were injured recently and must wait to use this. [[YELLOW]]({0}s)
+Item.FluxPickaxe.Name=Flux Pickaxe
+Item.FluxPickaxe.Lore.1=[[GRAY]]Has a chance of instantly smelting ores.
+Item.FluxPickaxe.Lore.2=[[GRAY]]Requires Smelting level {0}+
 
 #TELEPORTATION
 Teleport.Commencing=[[GRAY]]Commencing teleport in [[GOLD]]({0}) [[GRAY]]seconds, please stand still...
@@ -908,7 +911,6 @@ Smelting.Effect.4=Vanilla XP Boost
 Smelting.Effect.5=Increase vanilla XP gained while smelting
 Smelting.Effect.6=Flux Mining
 Smelting.Effect.7=Chance for ores to be instantly smelted while mining
-Smelting.FluxMining.Success=[[GREEN]]That ore smelted itself!
 Smelting.Listener=Smelting:
 Smelting.SkillName=SMELTING
 
